[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Images/None.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GUI/playerInfoUI.gd" type="Script" id=3]

[node name="PlayerInfoUI" type="VBoxContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 228.0
margin_bottom = 498.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameContainer" type="PanelContainer" parent="."]
margin_right = 218.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )

[node name="Name" type="Label" parent="NameContainer"]
margin_left = 7.0
margin_top = 15.0
margin_right = 211.0
margin_bottom = 29.0
text = "Bot1"
align = 1
uppercase = true
max_lines_visible = 1

[node name="MoneyContainer" type="PanelContainer" parent="."]
margin_top = 49.0
margin_right = 218.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 30 )

[node name="Money" type="Label" parent="MoneyContainer"]
margin_left = 7.0
margin_top = 8.0
margin_right = 211.0
margin_bottom = 22.0
text = "$$"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 83.0
margin_right = 218.0
margin_bottom = 115.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="AttributeContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_right = 213.0
margin_bottom = 32.0

[node name="Item" type="TextureRect" parent="MarginContainer/AttributeContainer"]
margin_right = 102.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Upgrade" type="TextureRect" parent="MarginContainer/AttributeContainer"]
margin_left = 106.0
margin_right = 208.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Inventory" type="PanelContainer" parent="."]
margin_top = 119.0
margin_right = 218.0
margin_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Inventory"]
margin_left = 7.0
margin_top = 7.0
margin_right = 211.0
margin_bottom = 362.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 199.0
margin_bottom = 350.0

[node name="HBoxContainer" type="HBoxContainer" parent="Inventory/MarginContainer/VBoxContainer"]
margin_right = 194.0
margin_bottom = 327.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SeedInventory" type="VBoxContainer" parent="Inventory/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 95.0
margin_bottom = 327.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HarvestedInventory" type="VBoxContainer" parent="Inventory/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 99.0
margin_right = 194.0
margin_bottom = 327.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InventoryValue" type="Label" parent="Inventory/MarginContainer/VBoxContainer"]
margin_top = 331.0
margin_right = 194.0
margin_bottom = 345.0
text = "Value: $__"
align = 1
